<resources>
    <string name="label">JOB SEARCH</string>
    <string name="add_to_favourite">Add Fav :</string>
    <string name="title">company title :</string>
    <string name="description">description :</string>
    <string name="how_to_apply">apply for job :</string>
    <string name="app_id_unit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="sign_out">Sign out</string>
    <string name="location">company Location :</string>
    <string name="created_at">company Created At :</string>
    <string name="internet_connction">Please check internet connection</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="ok">OK</string>
    <string name="app_id">ca-app-pub-9602647515351884~8405064865</string>

    <string name="home">Home</string>
    <string name="harish">harish</string>
    <string name="msg_db">Message-database.db</string>
    <string name="savedjobs">savedjobs</string>
    <string name="jobs">jobs</string>
    <string name="jobsToast">No Saved Jobs Available</string>
    <string name="contentdesc">Image_loading</string>
    <string name="word_db">word_database</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widgetaction">android.appwidget.action.APPWIDGET_UPDATE</string>
    <string name="shared">shared</string>
    <string name="sss">SearchJob</string>

    <string name="mainpage">Main Page</string>
    <string name="emailusername">Enter the email along with username</string>
    <string name="loginsuccess">Login Success</string>
    <string name="invalid">Invalid Username or Password</string>
    <string name="aman">aman</string>
    <string name="reg">Register</string>
    <string name="regsuc">Registration successful</string>
    <string name="regunsuc">Registration not successful</string>
    <string name="fp">Forgot Password</string>
    <string name="enteremail">Enter email</string>
    <string name="ver">Verifying....</string>
    <string name="resetpass">Reset the password instruction send to email</string>
    <string name="emailnotpresent">Email don\'t exist</string>
    <string name="ompanylists">Company Lists</string>
    <string name="id">id</string>
    <string name="type">type</string>
    <string name="url">url</string>
    <string name="createdat">created_at</string>
    <string name="company">company</string>
    <string name="curl">company_url</string>
    <string name="loc">location</string>
    <string name="clogo">company_logo</string>
    <string name="hta">how_to_apply</string>
    <string name="cinfo">Company Info</string>
    <string name="widgetsp">sharedPrefFile</string>
    <string name="ST">SHOW_TITLE</string>
    <string name="NT">Not Seen any title</string>
    <string name="imag1">imag1</string>
    <string name="send">Send</string>
    <string name="ddd">sdd</string>
    <string name="user_sign_in">User Sign In</string>
    <string name="wadef">Registered Password</string>
    <string name="wad">Enter registered password</string>
    <string name="w">signin</string>
    <string name="forgot_password">forgot password</string>
    <string name="sssss">sssss</string>
    <string name="user_register">User Register</string>
    <string name="user_email_id">User Email Id</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="wdef">Password</string>
    <string name="qsd">Enter password</string>
    <string name="refresh">refresh</string>
    <string name="favjob">favjob</string>
    <string name="signout">signout</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="r">Register</string>
    <string name="ggsf">Forgot Password</string>


</resources>
